# atoplace

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  ISSUES.md  LICENSE  README.md  SCRATCHPAD.md  pyproject.toml
atoplace/: __init__.py  cli.py  component_patterns.yaml  patterns.py  visualization_color_manager.py  visualization_colors.yaml
atoplace/api/: __init__.py  actions.py  inspection.py  session.py
atoplace/board/: __init__.py  abstraction.py  atopile_adapter.py  kicad_adapter.py  lock_file.py
atoplace/dfm/: __init__.py  profiles.py
atoplace/mcp/: LAUNCHER_IMPROVEMENTS.md  __init__.py  backends.py  bridge.py  drc.py  ipc.py  ipc_session.py  kicad.py  kipy_adapter.py  kipy_session.py  launcher.py  prompts.py  server.py
atoplace/nlp/: __init__.py  constraint_parser.py  modification.py
atoplace/output/: README.md  __init__.py
atoplace/placement/: __init__.py  canvas_renderer.py  constraints.py  delta_compression.py  force_directed.py  legalizer.py  module_detector.py  stream_server.py  stream_viewer.py  streaming_visualizer.py  (+4 more)
docs/: ARCHITECTURE.md  CANVAS_VISUALIZATION.md  CLAUDE.md  CUSTOM_PATTERNS.md  FPGA_FANOUT_IMPLEMENTATION_PLAN.md  FPGA_IMPLEMENTATION_PLAN.md  LLM_INTEGRATION_PLAN.md  LLM_TOOL_EXPANSION.md  PRODUCT_PLAN.md  PRODUCT_REQUIREMENTS.md  STREAMING_VISUALIZATION.md  UNIFIED_VISUALIZATION_DESIGN.md  VISUALIZATION_COLORS.md  VISUALIZATION_UI_COMPLETE.md
examples/ai-pin/backend/api/: Dockerfile  README.md  pyproject.toml  requirements.txt
examples/ai-pin/backend/api/app/: config.py  main.py  queue.py  storage.py
examples/ai-pin/backend/api/tests/: test_api.py
kicad_plugin/: README.md  __init__.py  atoplace_action.py
research/: advanced_algorithms.md  algorithm_deep_dive.md  analytical_placement_methods.md  autorouter_lessons_seveibar.md  autorouting_autoplacement_findings.md  bga_fanout_algorithms.md  competitor_analysis.md  diff_pair_routing_strategies.md  fpga_routing_strategies.md  implementation_strategies.md  layout_rules_research.md  llm_eda_integration.md  manhattan_placement_strategy.md  nlp_layout_control.md  precision_visual_grounding.md  routing_implementation_plan.md  topological_routing_research.md
scripts/: atoplace-kicad  test_canvas_export.py  test_routing_dogtracker.py  test_routing_visualization.py  test_streaming.py  test_streaming_demo.py
tests/: __init__.py  conftest.py  test_astar_router.py  test_atopile_integration.py  test_constraints.py  test_context_generators.py  test_diff_pairs.py  test_force_directed.py  test_mcp_server.py  test_nlp.py  test_routing_manager.py
(+171 files in other folders)
